# concurrent_graphQL_requester

./: .env  Cargo.toml  schema.json  types_for_space.json
src/: main.rs
test/: query_2.graphql
tests/: bench.rs
