[package]
name = "multithread_subgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
graphql_client = { version = "0.12.0", features = ["reqwest-blocking"] }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = "1.0.152"
